Remove update services first commit
